# Cody2

Cody/: CMakeLists.txt  main.c
Cody/head/: add.h  delete.h  mainInterface.h  modify.h  search.h  show.h  sort.h  statistics.h  student.h
Cody/src/: add.c  delete.c  mainInterface.c  modify.c  search.cpp  show.c  sort.c  statistics.cpp
